Fixed a lot
performance slightly worse than v1 but logic is much more consistent, fluids disappearing over time should be fixed