@@ -1,10 +1,7 @@
 package com.moujounakki.archimedesfluids.mixins;
 
 import com.moujounakki.archimedesfluids.*;
-import com.moujounakki.archimedesfluids.Fluidlogging;
-import com.moujounakki.archimedesfluids.FluidloggingProperty;
 import net.minecraft.core.BlockPos;
-import net.minecraft.world.level.block.state.properties.BooleanProperty;
 import net.minecraft.core.Direction;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.level.Level;
@@ -12,21 +9,18 @@ import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.LevelReader;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import net.minecraft.world.level.material.FlowingFluid;
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.level.material.FluidState;
 import net.minecraft.world.level.material.Fluids;
-import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.block.state.properties.BooleanProperty;
 import net.minecraft.world.phys.Vec3;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Overwrite;
 import org.spongepowered.asm.mixin.Shadow;
+import java.util.List;
 
-import java.util.ArrayList; // Import ArrayList
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List; // Import List
-import java.util.Random;
 
 @Mixin(FlowingFluid.class)
 @SuppressWarnings("unused")
@@ -36,96 +30,98 @@ public abstract class MixinFlowingFluid extends Fluid implements IMixinFlowingFl
         FluidState fluidstate = blockstate.getFluidState();
         FluidSpreadType spreadType = this.getFluidSpreadType(blockstate);
         int amount = this.getAmount(state);
-
-        int fromFluidAmount = level.getFluidState(pos).getAmount();
-        int toFluidAmount = level.getFluidState(pos.below()).getAmount();
-
+        
         if (spreadType == FluidSpreadType.REPLACE) {
             if (!blockstate.isAir()) {
                 this.beforeDestroyingBlock(level, pos.below(), blockstate);
             }
-            this.transferFluid(level, pos, pos.below(), amount, 0);
+            this.transferFluid(level, pos, pos.below(), amount);
         } else if (spreadType == FluidSpreadType.ADD && fluidstate.getAmount() < 8) {
-            int transfer = Math.min(amount, 8 - toFluidAmount);
-            this.transferFluid(level, pos, pos.below(), transfer, 0);
+            int otherAmount = fluidstate.getAmount();
+            int transfer = Math.min(amount, 8 - otherAmount);
+            this.transferFluid(level, pos, pos.below(), transfer);
         } else if (amount > 1) {
-          Direction[] directions = new Direction[]{Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST};
-            List<Direction> shuffledDirections = new ArrayList<>(Arrays.asList(directions));
-            Collections.shuffle(shuffledDirections, new Random());
+            List<Direction> directionList = Direction.Plane.HORIZONTAL.shuffledCopy(level.getRandom());
+Direction[] shuffledDirections = directionList.toArray(new Direction[0]);
             for (Direction direction : shuffledDirections) {
                 BlockPos pos1 = pos.relative(direction);
                 BlockState blockstate1 = level.getBlockState(pos1);
                 FluidState fluidstate1 = blockstate1.getFluidState();
                 FluidSpreadType spreadType1 = this.getFluidSpreadType(blockstate1);
-
+                
                 if (spreadType1 == FluidSpreadType.REPLACE) {
                     if (!blockstate1.isAir()) {
                         this.beforeDestroyingBlock(level, pos1, blockstate1);
                     }
-                    this.transferFluid(level, pos, pos1, fromFluidAmount, fluidstate1.getAmount());
+                    this.transferFluid(level, pos, pos1);
                     break;
                 } else if (spreadType1 == FluidSpreadType.ADD) {
                     int otherAmount = fluidstate1.getAmount();
                     if (amount > otherAmount) {
-                        this.transferFluid(level, pos, pos1, fromFluidAmount, otherAmount);
+                        this.transferFluid(level, pos, pos1);
                         break;
                     }
                 }
             }
-        } else if (amount == 1 && Math.random() < 0.3) {
-            Direction[] directions = new Direction[]{Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST};
-            List<Direction> shuffledDirections = new ArrayList<>(Arrays.asList(directions));
-            Collections.shuffle(shuffledDirections, new Random());
+        } else if (amount == 1 && level.random.nextFloat() < 0.3) {
+List<Direction> directionList = Direction.Plane.HORIZONTAL.shuffledCopy(level.getRandom());
+Direction[] shuffledDirections = directionList.toArray(new Direction[0]);
             for (Direction direction : shuffledDirections) {
                 BlockPos pos1 = pos.relative(direction);
                 BlockState blockstate1 = level.getBlockState(pos1);
                 FluidSpreadType spreadType1 = this.getFluidSpreadType(blockstate1);
-
+                
                 if (spreadType1 == FluidSpreadType.REPLACE) {
                     if (!blockstate1.isAir()) {
                         this.beforeDestroyingBlock(level, pos1, blockstate1);
                     }
-                    this.transferFluid(level, pos, pos1, fromFluidAmount, 0);
+                    this.transferFluid(level, pos, pos1);
                     break;
                 }
             }
         }
     }
-
+    
     private boolean isFallingAt(LevelReader reader, BlockPos pos) {
         BlockState blockstate = reader.getBlockState(pos);
         BlockPos blockpos1 = pos.above();
         BlockState blockstate2 = reader.getBlockState(blockpos1);
         FluidState fluidstate2 = blockstate2.getFluidState();
+        
         return (!fluidstate2.isEmpty() && fluidstate2.getType().isSame(this) && this.canPassThroughWall(Direction.UP, reader, pos, blockstate, blockpos1, blockstate2));
     }
-
+    
     @SuppressWarnings("SameReturnValue")
     @Shadow
     private boolean canPassThroughWall(Direction p_76062_, BlockGetter p_76063_, BlockPos p_76064_, BlockState p_76065_, BlockPos p_76066_, BlockState p_76067_) {
         return false;
     }
-
+    
+    private void transferFluid(LevelAccessor level, BlockPos from, BlockPos to) {
+        this.transferFluid(level, from, to, level.getFluidState(from).getAmount(), level.getFluidState(to).getAmount());
+    }
+    
+    private void transferFluid(LevelAccessor level, BlockPos from, BlockPos to, int transfer) {
+        FluidState fromFluidState = level.getFluidState(from);
+        FluidState toFluidState = level.getFluidState(to);
+        this.transferFluid(level, from, to, fromFluidState.getAmount(), toFluidState.getAmount(), transfer);
+    }
+    
     private void transferFluid(LevelAccessor level, BlockPos from, BlockPos to, int fromAmount, int toAmount) {
         this.transferFluid(level, from, to, fromAmount, toAmount, 1);
     }
-
-    private void transferFluid(LevelAccessor level, BlockPos from, BlockPos to, int transfer) {
-        int fromAmount = level.getFluidState(from).getAmount();
-        int toAmount = level.getFluidState(to).getAmount();
-        this.transferFluid(level, from, to, fromAmount, toAmount, transfer);
-    }
-
+    
     private void transferFluid(LevelAccessor level, BlockPos from, BlockPos to, int fromAmount, int toAmount, int transfer) {
         this.setFlowing(level, to, toAmount + transfer);
         this.setFlowing(level, from, fromAmount - transfer);
     }
-
+    
     private void setFlowing(LevelAccessor level, BlockPos pos, int amount) {
         BlockState blockState = level.getBlockState(pos);
-
+        
         if (blockState.hasProperty(ArchimedesFluids.FLUID_LEVEL)) {
             Fluidlogging fluidlogging = FluidloggingProperty.getFluidLogging(getFlowing(1, false).getType());
+            
             if (fluidlogging != null) {
                 level.setBlock(pos, blockState
                         .setValue(ArchimedesFluids.FLUIDLOGGED, fluidlogging)
@@ -135,30 +131,33 @@ public abstract class MixinFlowingFluid extends Fluid implements IMixinFlowingFl
                 return;
             }
         }
-
+        
         if (amount < 1) {
             level.setBlock(pos, Blocks.AIR.defaultBlockState(), 3);
             return;
         }
-
+        
         level.setBlock(pos, this.getFlowing(amount, this.isFallingAt(level, pos)).createLegacyBlock(), 3);
     }
-
+    
     @Override
     public void changeFluid(Level level, BlockPos pos, int amount) {
         int current = level.getFluidState(pos).getAmount();
-        if (current + amount > 8)
-            throw new IllegalArgumentException("Cannot add over 8 fluid (current %d, trying to add: %d)".formatted(current, amount));
+        
+        if (current + amount > 8) {
+            throw new IllegalArgumentException(String.format("Cannot add over 8 fluid (current %d, trying to add: %d)", current, amount));
+        }
+        
         this.setFlowing(level, pos, current + amount);
     }
-
+    
     @Shadow
     public abstract FluidState getFlowing(int p_75954_, boolean p_75955_);
-
-    @Shadow
-    protected abstract void beforeDestroyingBlock(LevelAccessor p_76002_, BlockPos p_76003_, BlockState p_76004_);
     
-  @Overwrite
+       @Shadow
+    protected abstract void beforeDestroyingBlock(LevelAccessor p_76002_, BlockPos p_76003_, BlockState p_76004_);
+
+    @Overwrite
     protected static int getLegacyLevel(FluidState p_76093_) {
         return 8 - Math.min(p_76093_.getAmount(), 8);
     }
@@ -180,22 +179,31 @@ public abstract class MixinFlowingFluid extends Fluid implements IMixinFlowingFl
         if (hasSameAbove(state, blockGetter, pos)) {
             return 1.0F;
         }
+        
         int found = 0;
         int amount = state.getAmount();
+        
         for (Direction direction : Direction.Plane.HORIZONTAL) {
             FluidState state1 = blockGetter.getFluidState(pos.relative(direction));
+            
             if (!state1.getType().isSame(this)) {
                 continue;
             }
+            
             if (state1.getAmount() != amount + 1) {
                 continue;
             }
+            
             found++;
-            if (found == 2)
+            if (found == 2) {
                 break;
+            }
         }
-        if (found == 2)
+        
+        if (found == 2) {
             return (amount + 1) / 9.0F;
+        }
+        
         return state.getOwnHeight();
     }
 
@@ -209,13 +217,16 @@ public abstract class MixinFlowingFluid extends Fluid implements IMixinFlowingFl
         for (Direction direction : Direction.Plane.HORIZONTAL) {
             blockpos$mutableblockpos.setWithOffset(pos, direction);
             FluidState fluidstate = blockGetter.getFluidState(blockpos$mutableblockpos);
+            
             if (this.affectsFlow(fluidstate)) {
                 float f = fluidstate.getType().getHeight(fluidstate, blockGetter, blockpos$mutableblockpos);
                 float f1 = 0.0F;
+                
                 if (f == 0.0F) {
                     if (!blockGetter.getBlockState(blockpos$mutableblockpos).blocksMotion()) {
                         BlockPos blockpos = blockpos$mutableblockpos.below();
                         FluidState fluidstate1 = blockGetter.getFluidState(blockpos);
+                        
                         if (this.affectsFlow(fluidstate1)) {
                             f = fluidstate1.getType().getHeight(fluidstate1, blockGetter, blockpos);
                             if (f > 0.0F) {
@@ -228,13 +239,14 @@ public abstract class MixinFlowingFluid extends Fluid implements IMixinFlowingFl
                 }
 
                 if (f1 != 0.0F) {
-                    d0 += (double) ((float) direction.getStepX() * f1);
-                    d1 += (double) ((float) direction.getStepZ() * f1);
+                    d0 += (double)((float)direction.getStepX() * f1);
+                    d1 += (double)((float)direction.getStepZ() * f1);
                 }
             }
         }
 
         Vec3 vec3 = new Vec3(d0, 0.0D, d1);
+        
         if (state.getValue(FALLING)) {
             for (Direction direction1 : Direction.Plane.HORIZONTAL) {
                 blockpos$mutableblockpos.setWithOffset(pos, direction1);
@@ -264,3 +276,4 @@ public abstract class MixinFlowingFluid extends Fluid implements IMixinFlowingFl
     @Shadow
     public static final BooleanProperty FALLING = BlockStateProperties.FALLING;
 }
+
